@@ -1,4 +1,6 @@
-# $Id: Makefile,v 1.2 1997/06/09 23:48:27 tom Exp $
+# $Id: Makefile,v 1.3 1997/06/10 01:00:04 tom Exp $
+
+CC	= gcc-normal
 
 PROGS	= map unmap chrcount
 
@@ -15,6 +17,10 @@ unmap: unmap.o unmap_s.o
 
 map: map.o map_s.o
 	$(CC) -o $@ map.o map_s.o
+
+map.o map_s.o \
+unmap.o \
+unmap_s.o : unmap.h
 
 check: map unmap
 	sh -c ./run_test.sh
