@@ -1,10 +1,12 @@
-/* $Id: unmap.h,v 1.2 1997/06/09 10:59:38 tom Exp $ */
+/* $Id: unmap.h,v 1.3 1997/06/10 00:56:31 tom Exp $ */
 
+#include <stdlib.h>
 #include <stdio.h>
 #include <ctype.h>
+#include <getopt.h>
 
 #define ESCAPE '\033'
 #define BACKSLASH '\\'
 
-extern int unmap_s(FILE *ifp, FILE *ofp);
-extern int map_s(FILE *ifp, FILE *ofp);
+extern int unmap(FILE *ifp, FILE *ofp);
+extern int map(FILE *ifp, FILE *ofp);
